completed signup page UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="userEmail" />
     <string name="email">Email:</string>
     <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="stockpal_logo">stockpal logo</string>
 </resources>
